commit 6: rendering implemented.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<div lang="en">
+<div lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Data sonification project</title>
-    <link rel='icon' type='image/x-icon' href='favicon.ico'>
-    <link rel='stylesheet' href='global.css'>
+    <link rel='icon' type='image/x-icon' href='./static/favicon.ico'>
+    <link rel='stylesheet' href='./static/global.css'>
 </head>
 
 <div class="bg-dark" align="center">
@@ -16,11 +16,11 @@
         <input type="file" name="xlsfile" accept=".xls, .xlsx">
         </div>
         <div class="form-container">
-        <h3>Введите длительность сэмпла в секундах:</h3>
-        <input type="text" maxlength="3" name="Set duration:">
+        <h3>Set the duration of the sample in seconds:</h3>
+        <input type="text" maxlength="3" name="set_duration">
         </div>
         <div class="form-container">
-        <input type="submit" value="Отправить">
+        <input type="submit" value="Submit">
         </div>
     </form>
 
