--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Data sonification project</title>
-    <link rel='icon' type='image/x-icon' href='./static/favicon.ico'>
-    <link rel='stylesheet' href='./static/global.css'>
+    <link rel='icon' type='image/x-icon' href='/static/favicon.ico'>
+    <link rel='stylesheet' href='/static/global.css'>
 </head>
 
 <div class="bg-dark" align="center">
