commit 17(branch): flask uploading done

--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Data sonification project</title>
-    <link rel='icon' type='image/x-icon' href='/static/favicon.ico'>
-    <link rel='stylesheet' href='/static/global.css'>
+    <link rel='icon' type='image/x-icon' href='{{ url_for("static", filename="img/favicon.ico") }}'>
+    <link rel='stylesheet' href='{{ url_for("static", filename="css/global.css") }}'>
 </head>
 
 <div class="bg-dark" align="center">
