--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<div lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Data sonification project</title>
-    <link rel='icon' type='image/x-icon' href='{{ url_for("static", filename="img/favicon.ico") }}'>
-    <link rel='stylesheet' href='{{ url_for("static", filename="css/global.css") }}'>
-</head>
+{% extends "public/base.html" %}
 
-<div class="bg-dark" align="center">
-  <h1>Data sonification project</h1>
-</div>
-
+{% block main %}
     <form method="post" action="/" enctype="multipart/form-data" accept-charset="">
         <div class="form-container">
         <input type="file" name="xlsfile" accept=".xls, .xlsx">
@@ -24,6 +14,17 @@
         </div>
     </form>
 
-</div>
-</body>
-</html>
+   {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert-{{ category }} text-center ">
+                <span>{{ message }}</span>
+
+
+
+            </div>
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+{% endblock %}
