commit 24(master): minor bugs fixed

--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -3,7 +3,7 @@
 {% block main %}
     <form method="post" action="/" enctype="multipart/form-data" accept-charset="">
         <div class="form-container">
-        <input type="file" name="xlsfile" accept=".xls, .xlsx">
+        <input type="file" name="srcfile" accept=".xls, .xlsx, .csv">
         </div>
         <div class="form-container">
         <h3>Set the duration of the sample in seconds:</h3>
